debugging, site now properly launches

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Milky-Way-Wares-Redux",
+  "name": "mern-shopping",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
