--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "gh-pages": "^3.2.3"
   },
   "engines": {
     "npm": "7.x"
